--- a/compliance/risk_assessment/component.yaml
+++ b/compliance/risk_assessment/component.yaml
@@ -2,49 +2,50 @@ schema_version: "3.0.0"
 name: Risk Assessment Policies for Discovery
 documentation_complete: false
 
-verifications:
-- key: repo
-  name: Discovery Github repository
-  path: https://github.com/PSHCDevOps/discovery
-  type: URL
-
-- key: circle
-  name: Discovery Circle CI
-  path: https://circleci.com/gh/PSHCDevOps/discovery
-  type: URL
-
-- key: django
-  name: Django
-  path: https://docs.djangoproject.com/en/1.8/
-  type: URL
-
 satisfies:
 - standard_key: NIST-800-53
   control_key: RA-5 # Vulnerability Scanning
   implementation_statuses:
-    - Implemented
+    - partial
   narrative:
     - key: RA-5a
       text: |
-        _Control:_ **Scans for vulnerabilities in the information system and hosted applications monthly for Operating System (OS) and web application scanning; quarterly Database scanning (as applicable); and, OS and Web application scanning with every code release, and when new vulnerabilities potentially affecting the system/applications are identified and reported**
+        _Control:_ **The organization scans for vulnerabilities in the information system and hosted applications monthly for Operating System (OS) and web application scanning; quarterly Database scanning (as applicable); and, OS and Web application scanning with every code release, and when new vulnerabilities potentially affecting the system/applications are identified and reported**
+
+        The Discovery application is currently getting ready for relaunch onto the production environment, available to the public.  The site has been dormant for months and scans are just starting to be conducted to detect vulnerabilities before it goes live.  Once the initial penetration testing is completed, we will begin a regular routine of internal vulnerability scanning through OWASP ZAP and static code analysis, using a tool, such as Bandit (an open source static analysis tool).  Any vulnerabilities or code issues found will be added to the project backlog for prioritization by the Discovery management team and the GSA Authorizing Official.
+
+        Currently before any code gets deployed through CircleCI, unit and acceptance tests for the codebase must pass, which helps us catch potential issues before they wind up on the site.  In the future we will add more automated testing to this process to further reduce the potential for introduction of code vulnerabilities in a live environment.
 
 
     - key: RA-5b
       text: |
-        _Control:_ **Employs vulnerability scanning tools and techniques that facilitate interoperability among tools and automate parts of the vulnerability management process by using standards for; 1) Enumerating platforms, software flaws, and improper configurations; 2) Formatting checklists and test procedures; and 3) Measuring vulnerability impact**
+        _Control:_ **The organization employs vulnerability scanning tools and techniques that facilitate interoperability among tools and automate parts of the vulnerability management process by using standards for; 1) Enumerating platforms, software flaws, and improper configurations; 2) Formatting checklists and test procedures; and 3) Measuring vulnerability impact**
+
+        The Discovery team uses open source tools for scanning and testing that can be easily used openly and freely in other GSA projects.  All tools we use are commonly used in other GSA projects, ensuring that we can evolve in a similar direction over time.
+
+        We are trying to use standards like Open Control to help eliminate redundant work and make verification of security controls and standards reporting more standardized.  All issues found end up on the Discovery Trello board for prioritization by Discovery management in coordination with the GSA Authorizing Official.
+
+        The Discovery team welcomes all feedback on new processes and tools to integrate into our automated CI/CD processes in the future.  All suggestions will be prioritized by the Discovery management team.
 
 
     - key: RA-5c
       text: |
-        _Control:_ **Analyzes vulnerability scan reports and results from security control assessments**
+        _Control:_ **The organization analyzes vulnerability scan reports and results from security control assessments**
+
+        All results from vulnerability scans are researched and issues solved as quickly as possible by the Discovery team.  All issues found from the vulnerability scanning results are prioritized on the project Trello board by the Discovery management team in coordination with the GSA Authorizing Official and other relevant security professionals.
+
+        The Cloud.gov hosting environment maintains it's own vulnerability scanning procedures, which should be available in the Cloud.gov SSP Control documentation.
 
 
     - key: RA-5d
       text: |
-        _Control:_ **Remediates legitimate high-risk vulnerabilities mitigated within thirty days; moderate risk vulnerabilities mitigated within ninety days in accordance with an organizational assessment of risk**
+        _Control:_ **The organization remediates legitimate high-risk vulnerabilities mitigated within thirty days; moderate risk vulnerabilities mitigated within ninety days in accordance with an organizational assessment of risk**
+
+        The Discovery application is built using an Agile development and maintenance philosophy giving the team immense flexibility in executing feature work to fix high risk vulnerabilities.  All high risk vulnerabilities are prioritized above feature work, and can be deployed to the live staging and production environments in days or weeks.  All high risk vulnerabilities are fixed and deployed to production within thirty days, and other moderate issues within sixty days of discovery.
 
 
     - key: RA-5e
       text: |
-        _Control:_ **Shares information obtained from the vulnerability scanning process and security control assessments with ISSO, ISSM, System Program Manager, and submits quarterly as part of the POA&M to the GSA OCISO (unless scanned by GSA enterprise vulnerability scanning solution) to help eliminate similar vulnerabilities in other information systems (i.e., systemic weaknesses or deficiencies)**
+        _Control:_ **The organization shares information obtained from the vulnerability scanning process and security control assessments with ISSO, ISSM, System Program Manager, and submits quarterly as part of the POA&M to the GSA OCISO (unless scanned by GSA enterprise vulnerability scanning solution) to help eliminate similar vulnerabilities in other information systems (i.e., systemic weaknesses or deficiencies)**
 
+        The relevant divisions of GSA that maintain security across the organization may have access to any and all security related documentation and security vulnerability testing results.  The Discovery management team can also regularly forward security vulnerability and testing results to delegated officials within GSA when conducted if requested.
