--- a/compliance/security_planning/component.yaml
+++ b/compliance/security_planning/component.yaml
@@ -1,12 +1,20 @@
 schema_version: "3.0.0"
 name: Security Planning Policies for Discovery
-documentation_complete: false
+
+references:
+- name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
 
 satisfies:
 - standard_key: NIST-800-53
   control_key: PL-8 # Information Security Architecture
-  implementation_statuses:
-    - partial
+  implementation_status: partial
   narrative:
     - key: PL-8a
       text: |
