--- a/compliance/system_services_acquisition/component.yaml
+++ b/compliance/system_services_acquisition/component.yaml
@@ -1,25 +1,55 @@
 schema_version: "3.0.0"
 name: System and Services Acquisition Policies for Discovery
-documentation_complete: false
+
+references:
+- name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+
+verifications:
+- key: github
+  name: GitHub Documentation
+  path: https://help.github.com/
+  type: URL
+
+- key: circleci
+  name: CircleCI Documentation
+  path: https://circleci.com/docs/2.0/
+  type: URL
+
+- key: trello
+  name: Discovery Trello Board
+  path: https://trello.com/b/AEoWtET7/discovery-20
+  type: URL
+
 
 satisfies:
 - standard_key: NIST-800-53
   control_key: SA-11 (1) # Developer Security Testing and Evaluation - Static Code Analysis
-  implementation_statuses:
-    - complete
+  implementation_status: partial
+  covered_by:
+    - verification_key: github
+    - verification_key: circleci
+    - verification_key: trello
   narrative:
     - text: |
         _Control:_ **The organization requires the developer of the information system, system component, or information system service to employ static code analysis tools to identify common flaws and document the results of the analysis**
 
-        Currently the Discovery application maintains a process of routine unit and acceptance testing upon pushing to the official source repository or merges to the develop or master branches, but static code analysis is not yet implemented as an automatic tool that runs as part of the CircleCI CI/CD process.
+        Currently the Discovery application maintains a process of routine unit and acceptance testing upon pushing to the [official source repository](https://github.com/PSHCDevOps/discovery) or merges to the develop or master branches, but static code analysis is not yet implemented as an automatic tool that runs as part of the CircleCI CI/CD process.
 
         There is currently a task in the Discovery project backlog to implement CI/CD based static code analysis on pushes to the official GitHub repository or merges to protected branches awaiting prioritization by the Discovery management team in coordination with the GSA Authorizing Official.
 
 
 - standard_key: NIST-800-53
   control_key: SA-22 (1) # Unsupported System Components - Alternative Sources for Continued Support
-  implementation_statuses:
-    - complete
+  implementation_status: complete
+  covered_by:
+    - verification_key: trello
   narrative:
     - text: |
         _Control:_ **The organization; 1) Replaces information system components when support for the components is no longer available from the developer, vendor, or manufacturer; and 2) Provides justification and documents approval for the continued use of unsupported system components required to satisfy mission/business needs**
