--- a/compliance/system_communications_protection/component.yaml
+++ b/compliance/system_communications_protection/component.yaml
@@ -1,12 +1,53 @@
 schema_version: "3.0.0"
 name: System and Communications Protection Policies for Discovery
-documentation_complete: false
+
+references:
+- name: Discovery Github repository
+  path: https://github.com/PSHCDevOps/discovery
+  type: URL
+
+- name: Discovery Circle CI
+  path: https://circleci.com/gh/PSHCDevOps/discovery
+  type: URL
+
+
+verifications:
+- key: cloudgov
+  name: Cloud.gov Documentation
+  path: https://cloud.gov/docs/
+  type: URL
+
+- key: docker
+  name: Docker Documentation
+  path: https://docs.docker.com/
+  type: URL
+
+- key: django
+  name: Django Documentation
+  path: https://docs.djangoproject.com/en/1.8/
+  type: URL
+
+- key: sam
+  name: SAM API
+  path: https://gsa.github.io/sam_api/sam/index.html
+  type: URL
+
+- key: fpds
+  name: FPDS ATOM Feeds
+  path: https://www.fpds.gov/wiki/index.php/ATOM_Feed_FAQ
+  type: URL
+
 
 satisfies:
 - standard_key: NIST-800-53
   control_key: SC-7 # Boundary Protection
-  implementation_statuses:
-    - complete
+  implementation_status: complete
+  covered_by:
+    - verification_key: cloudgov
+    - verification_key: docker
+    - verification_key: django
+    - verification_key: sam
+    - verification_key: fpds
   narrative:
     - key: SC-7a
       text: |
@@ -41,8 +82,9 @@ satisfies:
 
 - standard_key: NIST-800-53
   control_key: SC-13 # Cryptographic Protection
-  implementation_statuses:
-    - complete
+  implementation_status: complete
+  covered_by:
+    - verification_key: django
   narrative:
     - text: |
         _Control:_ **The information system implements FIPS 140-2 validated encryption modules for digital media stored outside of controlled areas; e-mail; for data on portable storages devices; web sites (internal and public) with logon functions (must also implement TLS); and all sensitive information such as Personally Identifiable Information (as deemed by the data owner) transmitted outside the GSA firewall in accordance with applicable federal laws, Executive Orders, directives, policies, regulations, and standards**
@@ -54,8 +96,9 @@ satisfies:
 
 - standard_key: NIST-800-53
   control_key: SC-28 (1) # Protection of Information at Rest - Cryptographic Protection
-  implementation_statuses:
-    - complete
+  implementation_status: complete
+  covered_by:
+    - verification_key: django
   narrative:
     - text: |
         _Control:_ **The information system implements cryptographic mechanisms to prevent unauthorized disclosure and modification of Personally Identifiable Information and all sensitive information (as deemed by the data owner) on stored data (e.g., database)**
