Ignoring a bunch of stuff that doesn't need to be sent to Cloud.gov.

--- a/.cfignore
+++ b/.cfignore
@@ -1,15 +1,25 @@
-pyfpds
 *.swp
-local_settings.py
+*.swn
+*.pyc
 *.DS_Store
 **.log
 logs/*.log
 logs/*.csv
+Vagrantfile
 .vagrant/
-mvenv/
-venv/
+vagrant-config.*.yml
+vagrant-config.yml
 src/
-*.pyc
+/static/
 .coverage
-*.sql
-*.sql.gz
+.project
+.pydevproject
+.settings/
+docker/
+docker-compose.yml
+celerybeat.pid
+docs/
+compliance/
+opencontrols/
+opencontrol.yml
+_book/
