--- a/vagrant-config.default.yml
+++ b/vagrant-config.default.yml
@@ -10,9 +10,11 @@ server_name: 'discovery-dev'
 box_name: 'ubuntu/trusty64'
 cpus: 2
 memory_size: 2048
+haproxy_port: 1936
 web_port: 8080
 db_port: 5432
 queue_port: 6379
+auth_port: 6479
 copy_ssh: false
 copy_gitconfig: true
 copy_vimrc: false
