--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,13 +39,13 @@ jobs:
       - run:
           name: Set CircleCI configuration
           command: |
-            cp discovery/local_settings.circle.py discovery/local_settings.py
+            cp app/discovery/local_settings.circle.py app/discovery/local_settings.py
 
       - run:
           name: Run unit tests
           command: |
             source /venv/bin/activate
-            python manage.py test api vendors contract
+            ./run test discovery api categories vendors contracts
 
       - store_artifacts:
           path: logs
@@ -89,7 +89,7 @@ jobs:
       - run:
           name: Set CircleCI configuration
           command: |
-            cp discovery/local_settings.circle.py discovery/local_settings.py
+            cp app/discovery/local_settings.circle.py app/discovery/local_settings.py
 
       - run:
           name: Import fixtures and run test server
@@ -99,6 +99,7 @@ jobs:
             scripts/init-db.sh /dev/stderr
             scripts/init-webserver.sh /dev/stderr
             scripts/load-fixtures.sh
+            cd app
             waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
 
       - run:
@@ -107,7 +108,7 @@ jobs:
             git submodule update --init --recursive
             scripts/wait-for-it/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
             source /venv/bin/activate
-            python manage.py test selenium_tests
+            ./run test tests
 
       - store_artifacts:
           path: logs
