Updating command invocations in the base scheduler, web, and worker CloudFoundry manifests.

--- a/cf/base-web-manifest.yml
+++ b/cf/base-web-manifest.yml
@@ -1,7 +1,7 @@
 ---
 inherit: base-manifest.yml
 
-command: scripts/init-webserver.sh /dev/stderr && waitress-serve --expose-tracebacks --url-scheme=https --port=$PORT discovery.wsgi:application
+command: scripts/init-webserver.sh /dev/stderr && cd app && waitress-serve --expose-tracebacks --url-scheme=https --port=$PORT discovery.wsgi:application
 memory: 256M
 services:
   - discovery-config
