--- a/cf/base-worker-manifest.yml
+++ b/cf/base-worker-manifest.yml
@@ -1,7 +1,7 @@
 ---
 inherit: base-manifest.yml
 
-command: celery -A discovery worker --loglevel=info --concurrency=4
+command: celery --workdir=app --app=discovery worker --loglevel=info --concurrency=4
 no-route: true
 health-check-type: process
 memory: 832M
