Adding submodule initialization in the CircleCI configuration and deploy-base script.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,7 @@ jobs:
           name: Import fixtures and run test server
           background: true
           command: |
+            git submodule update --init --recursive
             source /venv/bin/activate
             scripts/init-db.sh /dev/stderr
             scripts/init-webserver.sh /dev/stderr
