Changing the default Vagrant box to Debian stretch to match app server architecture.

--- a/vagrant/config.default.yml
+++ b/vagrant/config.default.yml
@@ -7,7 +7,7 @@
 # vagrant up or reload.
 #
 server_name: 'discovery-dev'
-box_name: 'ubuntu/trusty64'
+box_name: 'debian/contrib-stretch64'
 cpus: 2
 memory_size: 2048
 haproxy_port: 1936
